added more packages to the requirements file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 opencv-python==4.5.1.48
+torch
+torchvision
 pybullet==3.0.8
 open3d==0.14.1
 numpy
@@ -7,4 +9,5 @@ tabulate
 imutils==0.5.3
 pycocotools==2.0.2
 termcolor==1.1.0
-# scikit-image
+Pillow
+scikit-image
