--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 opencv-python==4.5.1.48
 torch
 torchvision
-pybullet==3.0.8
+# pybullet==3.0.8
+pybullet
 open3d
 numpy
 matplotlib
 tabulate
-imutils==0.5.3
-pycocotools==2.0.2
-termcolor==1.1.0
+#imutils==0.5.3
+imutils
+# pycocotools==2.0.2
+pycocotools
+# termcolor==1.1.0
+termcolor
 Pillow
 scikit-image
 tensorboard
