--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ pyquaternion==0.9.9
 pyyaml==6.0
 #   - rospkg=1.5.0
 pexpect==4.8.0
-mujoco==3.1.6 #2.3.7
+mujoco==2.3.7
 dm_control==1.0.9
 #   - py-opencv==4.7.0
 #   - matplotlib=3.7.1
