--- a/requirements.txt
+++ b/requirements.txt
@@ -28,8 +28,8 @@ pyquaternion==0.9.9
 pyyaml==6.0
 #   - rospkg=1.5.0
 pexpect==4.8.0
-# mujoco==2.3.7
-# dm_control==1.0.9
+mujoco==2.3.7
+dm_control==1.0.9
 #   - py-opencv==4.7.0
 #   - matplotlib=3.7.1
 einops
